<resources>
    <string name="app_name">Nyanpasu</string>

    <!-- Generic -->
    <string name="close">Close</string>
    <string name="sorting_order">Order</string>
    <string name="view_all">View all</string>
    <string name="comma_word">, %1$s</string>
    <string name="and_conjunction_word">\u0020and %1$s</string>
    <string name="search_hint">Search</string>
    <string name="cancel">Close</string>
    <string name="grant_permission">Grant</string>
    <string name="permission_denied_hint">Grant storage permission to download</string>
    <string name="cannot_download_release_hint">Can\'t download the selected release</string>
    <string name="no_magnet_supported_app_installed">No installed application can handle magnet links</string>

    <string name="browse_bottom_nav">Browse</string>
    <string name="library_bottom_nav">Library</string>
    <string name="releases_tracker_bottom_nav">Releases tracker</string>
    <string name="settings_bottom_nav">Settings</string>

    <string name="recently_viewed_fragment_title">Recents</string>
    <string name="saved_fragment_bottom_nav">Saved</string>
    <string name="saved_fragment_title">Saved releases</string>
    <string name="library_title">@string/library_bottom_nav</string>

    <string name="category">Category</string>
    <string name="data_source">Source</string>

    <string name="category_all">All categories</string>
    <string name="category_anime">Anime</string>
    <string name="category_anime_amv">Anime AMV</string>
    <string name="category_anime_english">Anime English translated</string>
    <string name="category_anime_non_english">Anime non English translated</string>
    <string name="category_anime_raw">Anime raw</string>
    <string name="category_audio">Audio</string>
    <string name="category_audio_lossless">Audio lossless</string>
    <string name="category_audio_lossy">Audio lossy</string>
    <string name="category_literature">Literature</string>
    <string name="category_literature_english">Literature English translated</string>
    <string name="category_literature_non_english">Literature non English translated</string>
    <string name="category_literature_raw">Literature raw</string>
    <string name="category_liveaction">Live action</string>
    <string name="category_liveaction_english">Live action English translated</string>
    <string name="category_liveaction_idol_prom">Live action Idol/Promotional video</string>
    <string name="category_liveaction_non_english">Live action non English translated</string>
    <string name="category_liveaction_raw">Live action raw</string>
    <string name="category_pictures">Pictures</string>
    <string name="category_pictures_graphics">Pictures graphics</string>
    <string name="category_pictures_photos">Pictures photos</string>
    <string name="category_software">Software</string>
    <string name="category_software_apps">Software apps</string>
    <string name="category_software_games">Software games</string>

    <string name="category_art">Art</string>
    <string name="category_doujinshi">Doujinshi</string>
    <string name="category_games">Games</string>
    <string name="category_manga">Manga</string>
    <string name="category_real_life">Real life</string>
    <string name="category_photobooks_pictures">Real life Photobooks and Pictures</string>
    <string name="category_videos">Real life Videos</string>

    <string name="connection_reset_error">Potential regional block detected</string>
    <string name="turn_on_regional_bypass">Bypass restrictions</string>
    <string name="regional_bypass_turned_on_hint">Regional restrictions bypass enabled ! Please wait</string>

    <string name="releases_search_hint">Type the keywords then press search</string>
    <string name="releases_search_suggestions_title">Recently searched</string>

    <string name="copy_magnet_link">Copy magnet link</string>
    <string name="magnet_link_copied">Magnet link copied to the clipboard</string>
    <string name="copy_torrent_link">Copy torrent link</string>
    <string name="torrent_link_copied">Torrent link copied to the clipboard</string>
    <string name="copy_release_link">Copy release link</string>
    <string name="release_link_copied">Release page\'s link copied to the clipboard</string>

    <string name="release_id_content">ID %1$s - From %2$s</string>
    <string name="release_no_comments_title">No comments</string>
    <string name="release_comments_title">Comments</string>
    <string name="release_comments_count_title">Comments · %1$d</string>
    <string name="comment_username_and_date">%1$s · %2$s</string>

    <string-array name="comments_sorting_order">
        <item>From the most recent</item>
        <item>From the least recent</item>
    </string-array>

    <string name="empty_saved_view_hint">The releases you saved will appear here</string>
    <string name="empty_viewed_releases_view_hint">The releases you viewed recently will appear here</string>

    <string name="release_category">Category: %1$s</string>
    <string name="release_submitter">Posted by %1$s</string>
    <string name="release_date">Release date: %1$s</string>
    <string name="submitter_null">Anonymous</string>
    <string name="manage_trackers_title">Manage tracker</string>
    <string name="add_tracker_title">Add tracker</string>
    <string name="tracker_fragment_empty_hint">Releases tracker notifies you about new releases based on your preferences.\nTo start click on \"Add tracker\"</string>

    <string name="track_all_from_user_title">Track all from this user</string>
    <string name="track_all_from_user_desc">You will get notified of all the new releases from this user</string>
    <string name="untrack_all_from_user_title">Untrack all from this user</string>
    <string name="untrack_all_from_user_desc">You won\'t get notified about new releases from this user anymore</string>

    <string name="releases_tracker_notif_name">@string/releases_tracker_bottom_nav</string>
    <plurals name="releases_tracker_notif_content">
        <item quantity="one">New releases found for one tracker</item>
        <item quantity="other">New releases found for %d trackers</item>
    </plurals>
    <string name="releases_tracker_notif_expanded_content_first_line">New release found for</string>
    <string name="release_tracker_new_releases_from_user">- User %1$s</string>
    <string name="release_tracker_new_releases_only_search_query">- %1$s</string>
    <string name="release_tracker_new_releases_from_user_with_search_query">- %1$s from user %2$s</string>

    <!-- Create tracker -->
    <string name="create">Create</string>
    <string name="validate">Validate</string>
    <string name="tracker_username_title">Username</string>
    <string name="create_tracker_hint">To start, type the username and the keywords, then click \"Validate\"</string>
    <string name="no_releases_found_for_tracker_hint">No releases found with these parameters, but you can still create the tracker if you want</string>
    <string name="finish_tracker_hint">The tracker will notify about the new releases found with these keywords.\nBelow you can see the latest releases</string>
    <string name="tracker_validation_failed_error">Can\'t validate the tracker</string>
    <string name="tracker_validation_user_not_found">User not found</string>
    <string name="tracker_already_exists_error">Tracker with same paramaters already exists</string>
    <string name="latest_releases_found_title">Latest releases</string>
    <string name="search_query_title">Keywords</string>
    <string name="tracker_name_title">Name (optional)</string>

    <string name="releases_tracker_title">@string/releases_tracker_bottom_nav</string>
    <string name="tracker_all_releases_from_user">All releases posted by %1$s</string>
    <string name="tracker_from_data_source">From %1$s</string>
    <string name="tracker_keywords">Keywords: %1$s</string>
    <string name="tracker_from_data_source_and_user">From %1$s - User %2$s</string>
    <string name="tracker_latest_release">Latest release: %1$s</string>
    <string name="tracker_no_releases_yet">No releases found yet</string>
    <string name="tracker_created_on">Tracker created on %1$s</string>
    <string name="delete_tracker">Delete tracker</string>

    <!-- Preference keys -->
    <string name="ui_mode_key">ui_mode</string>
    <string name="releases_tracker_notification_key">releases_tracker_notification</string>
    <string name="open_discord_key">open_discord</string>
    <string name="use_proxy_key">use_proxy</string>

    <!-- Preference Titles -->
    <string name="notifications_settings_title">Notifications</string>
    <string name="interface_settings_title">Interface</string>
    <string name="advanced_settings_title">Advanced</string>

    <!-- UI mode -->
    <string name="ui_mode_setting_title">Theme</string>

    <!-- Use proxy -->
    <string name="use_proxy_title">Bypass regional restrictions</string>
    <string name="use_proxy_desc">Restart the app to apply this setting</string>

    <!-- About info -->
    <string name="about_title">About</string>
    <string name="version_title">Version</string>
    <string name="join_discord_title">Join our Discord</string>
    <string name="join_discord_summary">You can report bugs and suggest new features here</string>
    <string name="developer_credits">Developed by Zhenxiang Chen</string>
    <string name="anime_time_sponsor">Supported by animetime.pw</string>

    <!-- Notifications settings -->
    <string name="releases_tracker_notifications_setting_title">Releases tracker notifications</string>
    <string name="releases_tracker_notifications_setting_summary_on">You will be notified about new releases</string>
    <string name="releases_tracker_notifications_setting_summary_off">You won\'t be notified about new releases</string>

</resources>