<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/activity_insets"
    android:orientation="vertical"
    tools:context=".CreateTrackerActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_insets"
        android:text="Create release tracker"
        android:layout_marginBottom="@dimen/text_vertical_spacer"
        android:textAppearance="@style/TextAppearance.Nyaasi.ReleaseTrackerSheet.Title"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_insets"
        android:hint="@string/search_query_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_query_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_insets"
        android:hint="@string/username_title"
        android:layout_marginTop="@dimen/text_input_layout_spacing"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_insets"
        android:layout_marginTop="@dimen/text_input_layout_spacing">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/categories_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_insets"
        android:layout_marginTop="@dimen/text_input_layout_spacing"
        android:layout_gravity="end">
        <Button
            android:id="@+id/create_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/validate"
            android:enabled="false"
            style="@style/Widget.MaterialComponents.Button.TextButton" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:focusable="false"
            style="@style/Widget.MaterialComponents.Button.TextButton" />
    </LinearLayout>

    <TextView
        android:id="@+id/hint_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_vertical_spacer"
        android:layout_marginHorizontal="@dimen/activity_insets"
        android:layout_gravity="center"
        android:text="@string/create_tracker_hint"
        android:maxWidth="@dimen/hint_text_max_width"
        android:gravity="center"/>

    <FrameLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone">
        <ProgressBar
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </FrameLayout>

    <TextView
        android:id="@+id/finish_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_vertical_spacer"
        android:layout_marginHorizontal="@dimen/activity_insets"
        android:layout_gravity="center"
        android:text="@string/finish_tracker_hint"
        android:maxWidth="@dimen/hint_text_max_width"
        android:visibility="gone"
        android:gravity="center"/>

    <TextView
        android:id="@+id/error_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_vertical_spacer"
        android:layout_marginHorizontal="@dimen/activity_insets"
        android:layout_gravity="center"
        android:maxWidth="@dimen/hint_text_max_width"
        android:textColor="@color/design_default_color_error"
        android:visibility="gone"
        android:gravity="center"
        tools:text="Error"/>

    <com.revengeos.revengeui.widget.BounceRecyclerView
        android:id="@+id/last_releases_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"/>

</LinearLayout>